ui: fix dark mode css of table w/o thead hard to read

--- a/asset/revamp/styles/scss/components/_content-darkmode.scss
+++ b/asset/revamp/styles/scss/components/_content-darkmode.scss
@@ -95,11 +95,17 @@
       }
 
       table {
-        thead {
-          th {
-            background: $bg-blue-dark;
-            color: $white;
-          }
+        // thead {
+        //   th {
+        //     background: $bg-blue-dark;
+        //     color: $white;
+        //   }
+        // }
+        th {
+          // @HACK: temporary fix for non-standard table markdown format, 
+          // that will not have table `thead`, like HTML formatted table on: payment-link-api.md
+          background: $bg-blue-dark;
+          color: $white;
         }
         tbody {
           tr {
